RM 2542: Added Ubuntu20/RH8 launcher