@@ -22,6 +22,7 @@ top_level_dir=$SBMTROOT
 
 mkdir -p $output_dir/mac64/sbmt/lib
 mkdir -p $output_dir/linux64/sbmt/lib
+mkdir -p $output_dir/linux64u20/sbmt/lib
 mkdir -p $output_dir/win64/sbmt/lib
 
 #echo "top_level_dir=$top_level_dir"
@@ -46,3 +47,13 @@ MEMSIZE=\`grep MemTotal /proc/meminfo | awk '{print \$2}'\`
 \"\$DIR/jre/bin/java\" -Xmx\${MEMSIZE}K -Djava.library.path=\"\$DIR/lib/linux64:\$DIR/lib/gdal/linux64\" -Dedu.jhuapl.sbmt.mission="${mission}" --add-exports java.desktop/com.sun.imageio.spi=ALL-UNNAMED -jar \"\$DIR/lib/near.jar\" \$@ &
 " > $output_dir/linux64/sbmt/runsbmt
 chmod +x $output_dir/linux64/sbmt/runsbmt
+
+echo -n -e "#!/bin/sh
+DIR=\`dirname \"\$0\"\`
+DIR=\"\`(cd \"\$DIR\"; pwd)\`\"
+export LD_LIBRARY_PATH=\"\$DIR/lib/linux64\":\"\$DIR/lib/gdal/linux64u20\":\$LD_LIBRARY_PATH
+export LC_NUMERIC=\"en_US.UTF-8\"
+MEMSIZE=\`grep MemTotal /proc/meminfo | awk '{print \$2}'\`
+\"\$DIR/jre/bin/java\" -Xmx\${MEMSIZE}K -Djava.library.path=\"\$DIR/lib/linux64:\$DIR/lib/gdal/linux64u20\" -Dedu.jhuapl.sbmt.mission="${mission}" --add-exports java.desktop/com.sun.imageio.spi=ALL-UNNAMED -jar \"\$DIR/lib/near.jar\" \$@ &
+" > $output_dir/linux64u20/sbmt/runsbmt
+chmod +x $output_dir/linux64u20/sbmt/runsbmt
